fix: Reverse spacing around .subtitle-intro

--- a/css/core.css
+++ b/css/core.css
@@ -152,7 +152,7 @@ a:focus {
 
 /* Subtitles */
 .subtitle-intro {
-    margin:0 0.5rem;
+    margin:0.5rem 0;
 }
 .subtitle-list {
     font-size:1.5rem;
